[metadata]
name = k-means-constrained
version = 0.7.4
description = K-Means clustering constrained with minimum and maximum cluster size
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause
author = Josh Levy-Kramer
url = https://github.com/joshlk/k-means-constrained
download_urls = https://pypi.org/project/k-means-constrained/
project_urls =
	Documentation = https://joshlk.github.io/k-means-constrained/
	Code = https://github.com/joshlk/k-means-constrained
	Issue tracker = https://github.com/joshlk/k-means-constrained/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Scientific/Engineering
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
[build-system]
requires = ["numpy>=2.0,<3", "cython>=3.0.11"]
[options]
zip_safe = False
; Currently includes the venv `k-means-env` directory. Can't work out how to exclude it
; Dont try. Its a HUGE RABAT HOLE
packages = find:

